functionally updated to the date and venue pages

--- a/app/views/create-event/date.html
+++ b/app/views/create-event/date.html
@@ -240,7 +240,9 @@
 
 		  <div class="form-group" style="margin-top:5px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <p style="margin-top:25px"><a href="/create-event/venue">I'll complete this later - I don't have this information yet</a></p>
+
+			  <input type="submit" formaction="/create-event/date-skip" value="I'll complete this later - I don't have this information yet"
+					 style="margin-top:25px; border:0px; padding:0px; background-color: transparent; color: #005ea5; text-decoration: underline; cursor: pointer; ">
 		  </div>
 
 	  </form>
