--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -59,8 +59,9 @@
 
 
 
+
 	  <h1 class="heading-large" style="margin-top:15px; margin-bottom:15px">
-		  Where will the event take place?
+		  Event venue and location
       </h1>
 
 	  <form action="/create-event/venue-onwards" method="get" class="form">
@@ -158,7 +159,6 @@
 			  <input type="submit" formaction="/create-event/venue-skip" value="I'll complete this later - I don't have this information yet"
 					 style="margin-top:25px; border:0px; padding:0px; background-color: transparent; color: #005ea5; text-decoration: underline; cursor: pointer; ">
 
-			  </p>
 		  </div>
 
 	  </form>
