--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -108,10 +108,13 @@
 		  </dl>
 
 
+
+
+
 		  <dl class="govuk-check-your-answers cya-questions-short" style="margin-top:45px;">
 
 			  <div>
-				  <dt class="cya-question heading-medium" style="vertical-align:top">Event webpage</dt>
+				  <dt class="cya-question heading-medium" style="vertical-align:top; width:30%;">Event webpage</dt>
 				  <dd class="cya-answer">  </dd>
 				  <dd class="cya-change" style="vertical-align:top">  </dd>
 			  </div>
@@ -119,12 +122,35 @@
 
 
 			  <div>
-				  <dt class="cya-question" style="width:30%">
-					  Title
+				  <dt class="cya-question">
+					  Event title
 				  </dt>
-				  <dd class="cya-answer">
-					  {{ data['event-title'] }}
+
+				  {% if session.data['event-title-error'] %}
+				  	<dd class="cya-answer bold">Incomplete</dd>
+				  {% else %}
+				  	<dd class="cya-answer">{{ data['event-title'] }}</dd>
+				  {% endif %}
+
+				  <dd class="cya-change">
+					  <a href="/create-event/change-title">
+						  Change
+					  </a>
 				  </dd>
+			  </div>
+
+
+			  <div>
+				  <dt class="cya-question">
+					  Event summary
+				  </dt>
+
+				  {% if session.data['summary-title-empty'] %}
+				  	<dd class="cya-answer">Optional field, left empty.</dd>
+				  {% else %}
+				  	<dd class="cya-answer">{{ data['summary-title'] }}</dd>
+				  {% endif %}
+
 				  <dd class="cya-change">
 					  <a href="/create-event/change-title">
 						  Change
@@ -196,7 +222,7 @@
 
 			  <div>
 				  <dt class="cya-question">
-					  Additional venue details
+					  Parking and directions
 				  </dt>
 
 				  {% if session.data['venue-additional-notes'] == "" %}
@@ -236,7 +262,13 @@
 				  <dt class="cya-question">
 					  Target sectors
 				  </dt>
-				  <dd class="cya-answer"    style="white-space: pre-wrap;">{{ data['sectors'] }}</dd>
+
+				  {% if session.data['sectors-error'] %}
+				  	<dd class="cya-answer bold">Incomplete</dd>
+				  {% else %}
+				  	<dd class="cya-answer" style="white-space: pre-wrap;">{{ data['sectors'] }}</dd>
+				  {% endif %}
+
 				  <dd class="cya-change" >
 					  <a href="/create-event/change-title">
 						  Change
@@ -249,7 +281,13 @@
 				  <dt class="cya-question">
 					  Export experience
 				  </dt>
-				  <dd class="cya-answer"     style="white-space: pre-wrap;">{{ data['audience-experience'] }}</dd>
+
+				  {% if session.data['audience-experience-error'] %}
+				  	<dd class="cya-answer bold">Incomplete</dd>
+				  {% else %}
+				  	<dd class="cya-answer" style="white-space: pre-wrap;">{{ data['audience-experience'] }}</dd>
+				  {% endif %}
+
 				  <dd class="cya-change">
 					  <a href="/create-event/change-title">
 						  Change
@@ -260,9 +298,15 @@
 
 			  <div>
 				  <dt class="cya-question">
-					  Target audience summary
+					  Eligibility
 				  </dt>
-				  <dd class="cya-answer"     style="white-space: pre-wrap;">{{ data['summary-target-audience'] }}</dd>
+
+				  {% if session.data['summary-target-audience-error'] %}
+				  	<dd class="cya-answer bold">Incomplete</dd>
+				  {% else %}
+				  	<dd class="cya-answer" style="white-space: pre-wrap;">{{ data['summary-target-audience'] }}</dd>
+				  {% endif %}
+
 				  <dd class="cya-change">
 					  <a href="/create-event/change-title">
 						  Change
@@ -370,7 +414,7 @@
 		  <dl class="govuk-check-your-answers cya-questions-short" style="margin-top:50px;">
 
 			  <div>
-				  <dt class="cya-question heading-medium" style="vertical-align:top">Registration</dt>
+				  <dt class="cya-question heading-medium" style="vertical-align:top">Registration form</dt>
 				  <dd class="cya-answer">  </dd>
 				  <dd class="cya-change" style="vertical-align:top">  </dd>
 			  </div>
@@ -420,7 +464,7 @@
 
 			  <div>
 				  <dt class="cya-question">
-					  Default questions
+					  Default registration questions
 				  </dt>
 				  <dd class="cya-answer" style="">
 					  <ul class="list list-bullet">
@@ -444,7 +488,7 @@
 			  {% if session.questionsData.length == 0  %}
 				  <div>
 					  <dt class="cya-question">
-						  Additional questions
+						  Additional registration questions
 					  </dt>
 					  <dd class="cya-answer" style="white-space: pre-wrap; vertical-align:top">No additional questions</dd>
 					  <dd class="cya-change">
@@ -541,7 +585,7 @@
 		  <dl class="govuk-check-your-answers cya-questions-short" style="margin-top:45px;">
 
 			  <div>
-				  <dd class="cya-answer heading-medium" style="vertical-align:top">Confirmation and reminders</dd>
+				  <dd class="cya-answer heading-medium" style="vertical-align:top">Registration confirmation and reminder messages</dd>
 				  <dd class="cya-change" style="vertical-align:top">  </dd>
 			  </div>
 
@@ -553,7 +597,7 @@
 			  <!--   EMAIL TEMPLATES  -->
 
 			  <div>
-				  <dt class="cya-question" style="vertical-align:top">Registration message</dt>
+				  <dt class="cya-question" style="vertical-align:top">Registration email</dt>
 				  <dd class="cya-answer">
 					  Your event booking ...
 				  </dd>
@@ -566,7 +610,7 @@
 
 
 			  <div>
-				  <dt class="cya-question" style="vertical-align:top">Reminder message</dt>
+				  <dt class="cya-question" style="vertical-align:top">Reminder email</dt>
 				  <dd class="cya-answer">
 					  Reminder of your upcoming event ...
 				  </dd>
