--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -379,13 +379,11 @@
 					  Further details and background
 				  </dt>
 
-
 				  {% if session.data['event-description-error'] %}
 				  	<dd class="cya-answer bold">Required field, incomplete.</dd>
 				  {% else %}
 				  	<dd class="cya-answer" style="white-space: pre-wrap;">{{ data['event-description'] }}</dd>
 				  {% endif %}
-
 
 				  <dd class="cya-change">
 					  <a href="/create-event/change-description">
@@ -397,9 +395,18 @@
 
 			  <div>
 				  <dt class="cya-question" style="vertical-align:top">Main image</dt>
-				  <dd class="cya-answer">
-					  <img src="/public/images/exportingheroimagesmall.jpg" style="width:240px; height:100px;">
-				  </dd>
+
+
+				  {% if session.data['image-error'] %}
+				  	<dd class="cya-answer bold">Required field, incomplete.</dd>
+				  {% else %}
+					  <dd class="cya-answer">
+						  <img src="/public/images/exportingheroimagesmall.jpg" style="width:240px; height:100px;">
+					  </dd>
+				  {% endif %}
+
+
+
 				  <dd class="cya-change" style="vertical-align:top">
 					  <a href="/create-event/change-images">
 						  Change
